--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+	<div class="container">
+		<h1 id="verification_heading">Verify Your Account</h1>
+		<p id="verification-subtext">We emailed you the six digit code to acciojob@gmail.com Enter the code below to confirm your email address.</p>
+
+		<div class="code-container">
+			<input type="text" class="code" placeholder="0"></input>
+			<input type="text" class="code" placeholder="0"></input>
+			<input type="text" class="code" placeholder="0"></input>
+			<input type="text" class="code" placeholder="0"></input>
+			<input type="text" class="code" placeholder="0"></input>
+			<input type="text" class="code" placeholder="0"></input>
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
