--- a/main.html
+++ b/main.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>OTP Entry</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<div class="container">
-		<h1 id="verification_heading">Verify Your Account</h1>
-		<p id="verification-subtext">We emailed you the six digit code to acciojob@gmail.com Enter the code below to confirm your email address.</p>
 
-		<div class="code-container">
-			<input type="text" class="code" placeholder="0"></input>
-			<input type="text" class="code" placeholder="0"></input>
-			<input type="text" class="code" placeholder="0"></input>
-			<input type="text" class="code" placeholder="0"></input>
-			<input type="text" class="code" placeholder="0"></input>
-			<input type="text" class="code" placeholder="0"></input>
-		</div>
-	</div>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h1 id="verification_heading">Verify Your Account</h1>
+  <p id="verification_subtext">Please enter the 6 digit code sent to your number</p>
 
+  <div class="code-container">
+    <input type="text" maxlength="1" class="code" id="code-1" inputmode="numeric">
+    <input type="text" maxlength="1" class="code" id="code-2" inputmode="numeric">
+    <input type="text" maxlength="1" class="code" id="code-3" inputmode="numeric">
+    <input type="text" maxlength="1" class="code" id="code-4" inputmode="numeric">
+    <input type="text" maxlength="1" class="code" id="code-5" inputmode="numeric">
+    <input type="text" maxlength="1" class="code" id="code-6" inputmode="numeric">
+  </div>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
